# demo_aws_cicd

./: .coverage  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: aws.yml  demo.yml
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/s1/: models.py  serializer.py  urls.py  views.py
demo/s1/migrations/: 0001_initial.py
tests/: version_test.py
